fix: remove extra space under editor when using fixed height and KaTeX

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -29,6 +29,9 @@ html {
   margin: 0;
   padding: 0;
   width: 100%;
+  &.fixed-height {
+    overflow-y: hidden;
+  }
 }
 
 * {
